# rust-kzg1d

./: Cargo.toml
src/: main.rs
src/kzg1d/: mod.rs  reed-solomon.rs
